Update form action URL in index.html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <form 
                 id="professionalForm" 
                 method="POST" 
-                action="[YOUR_N8N_WEBHOOK_URL]"
+                action="https://quimera-n8n.yhjcue.easypanel.host/webhook/756b05cd-5d71-47ee-a624-77d16f7abfd9"
                 enctype="multipart/form-data"
                 class="bg-white rounded-2xl shadow-xl overflow-hidden"
             >
